# EinstarSDK

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
ScannerDemo/: CMakeLists.txt  MeshDialog.cpp  MeshDialog.h  MeshDialog.ui  NewProjDlg.cpp  NewProjDlg.h  NewProjDlg.ui  ScannerDemo.vcxproj  device.cpp  device.h  devicefactory.cpp  devicefactory.h  e10device.cpp  e10device.h  images.qrc  main.cpp  newopenprojdialog.cpp  newopenprojdialog.h  newopenprojdialog.ui  opencreateslndlg.cpp  opencreateslndlg.h  opencreateslndlg.ui  rep_scanservice_replica.h  sdklogger.cpp  sdklogger.h  sn3dfiledialog.cpp  sn3dfiledialog.h  sn3dmainwindow.cpp  sn3dmainwindow.h  sn3dmainwindow.ui  sn3dstyle.cpp  sn3dstyle.h  zmq_sdk_config.ini
ScannerDemo/subContrl/: menuaction.cpp  menuaction.h  menuaction.ui  sn3dcamerwidget.cpp  sn3dcamerwidget.h  sn3dcamerwidget.ui  sn3ddialogback.cpp  sn3ddialogback.h  sn3ddialogback.ui  widgetcontent.cpp  widgetcontent.h  widgetcontent.ui
ScannerDemo/x64/Debug/ScannerDemo.tlog/: ScannerDemo.lastbuildstate
ScannerDemo/x64/Release/ScannerDemo.tlog/: ScannerDemo.lastbuildstate
doc/: Shining 3D EinStar_ SDK_User Manual_V1.4.0_check.docx  Shining 3D EinStar_ SDK_User Manual_V1.5.0_check.docx
include/: PublicClass.h  ScanServiceImp.h  SharedMemoryParser.h  Sn3DE10Sdk.h  Sn3DErrorCode.h  Sn3DPublic.h  Sn3DScanSdkAdapter  VideoThread.h  sdk_adapter.h  sdk_adapter_global.h  sn3d_smc.h  transmem.h
lib/: Sn3dE10SDK.lib  libzmq-v141-mt-4_3_2.lib  sdk_adapter.lib  sn3d_smc.lib
